--- a/templates/css/PITCHME.css
+++ b/templates/css/PITCHME.css
@@ -36,6 +36,7 @@
 
 .list-bullets-black li::before {
   background-color: black !important;
+  font-size: 1em
 }
 
 .list-bullets-circles {
@@ -71,8 +72,8 @@
 }
 
 .reveal pre code {
-  font-size: 1.2em;
-  line-height: 1.2;
+  font-size: 0.5em;
+  line-height: 0.5;
   border-radius: 10px;
   max-height: 60vh !important;
   overflow: scroll !important;
