--- a/templates/css/PITCHME.css
+++ b/templates/css/PITCHME.css
@@ -72,8 +72,8 @@
 }
 
 .reveal pre code {
-  font-size: 0.5em;
-  line-height: 0.5;
+  font-size: 1em;
+  line-height: 1em;
   border-radius: 10px;
   max-height: 60vh !important;
   overflow: scroll !important;
