--- a/templates/css/PITCHME.css
+++ b/templates/css/PITCHME.css
@@ -25,6 +25,11 @@
   margin:0 0 10px 0;
 }
 
+.list-content-custom li {
+  margin:0 0 10px 0;
+  font-size: 0.5em;
+}
+
 .list-content-verbose ul {
   list-style-type: square;
 }
